[gd_scene load_steps=65 format=3 uid="uid://bh111q25ruxtp"]

[ext_resource type="Script" uid="uid://t4kh1o7k4xj6" path="res://scenes/dual_perspective_test_player.gd" id="1_player"]
[ext_resource type="Script" uid="uid://ddprtht2qo7se" path="res://addons/inventory_system/core/inventory_component.gd" id="2_inv_comp"]
[ext_resource type="Script" uid="uid://bgudcqpbogui8" path="res://addons/inventory_system/core/equipment_component.gd" id="3_equip_comp"]
[ext_resource type="Script" uid="uid://cw07au03k3mfg" path="res://addons/inventory_system/core/inventory.gd" id="4_inv"]
[ext_resource type="Script" uid="uid://dqg7l1xgdnk4k" path="res://addons/inventory_system/core/inventory_slot.gd" id="5_slot"]
[ext_resource type="Script" uid="uid://0oumke1hqq02" path="res://addons/player_control_core/core/dual_perspective_controller_3d.gd" id="6_controller"]
[ext_resource type="Script" uid="uid://00fbir5gxwep" path="res://addons/player_control_core/core/player_input_router_3d.gd" id="7_input"]
[ext_resource type="Script" uid="uid://bjjvdh7ol6wh3" path="res://addons/player_control_core/core/player_motor_3d.gd" id="8_motor"]
[ext_resource type="Script" uid="uid://0b6846c0kky3" path="res://addons/player_control_fps/core/player_look_controller_3d.gd" id="9_fps_look"]
[ext_resource type="Script" uid="uid://dxe0iy4kpi1t3" path="res://addons/player_control_3rd_person/core/orbit_camera_controller_3d.gd" id="10_orbit"]
[ext_resource type="Script" uid="uid://bj0xc8uqm4vsi" path="res://addons/player_control_core/core/state_machine/player_state_machine.gd" id="11_state_machine"]
[ext_resource type="Script" uid="uid://frs8p3b0mojm" path="res://addons/player_control_core/core/state_machine/grounded_state.gd" id="12_grounded"]
[ext_resource type="Script" uid="uid://usyyiwva45ou" path="res://addons/player_control_core/core/state_machine/airborne_state.gd" id="13_airborne"]
[ext_resource type="Script" uid="uid://cbq0osrr5prct" path="res://addons/inventory_system/core/item_category.gd" id="14_rydct"]
[ext_resource type="Script" uid="uid://7dy7k5juccbd" path="res://addons/player_control_core/core/state_machine/ui_state.gd" id="14_ui_state"]
[ext_resource type="PackedScene" uid="uid://c4ciyr75aow6p" path="res://addons/inventory_system/ui/inventory_ui.tscn" id="15_inv_ui"]
[ext_resource type="PackedScene" path="res://addons/inventory_system/ui/quick_inventory_ui.tscn" id="16_quick_inv"]
[ext_resource type="PackedScene" path="res://addons/inventory_system/ui/item_tooltip_ui.tscn" id="17_tooltip"]
[ext_resource type="Script" uid="uid://b7qhwhcj7pgjr" path="res://addons/inventory_system/ui/tooltip_controller.gd" id="18_tooltip_ctrl"]
[ext_resource type="Script" uid="uid://bxuwiwu17py1y" path="res://addons/inventory_system/core/inventory_interaction_handler.gd" id="19_handler"]
[ext_resource type="PackedScene" uid="uid://c0wo2ldbnefie" path="res://assets/characters/quaternius/player.tscn" id="20_character"]
[ext_resource type="Script" uid="uid://ckhcbx5786s1m" path="res://addons/player_control_core/core/animation_controller.gd" id="21_anim_ctrl"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_player"]
radius = 0.4
height = 1.8

[sub_resource type="Resource" id="Slot_1"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="Slot_2"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="Slot_3"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="Slot_4"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="Slot_5"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="Slot_6"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="Slot_7"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="Slot_8"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="Slot_9"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="Slot_10"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="Slot_11"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="Slot_12"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="Slot_13"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="Slot_14"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="Slot_15"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="Slot_16"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="Slot_17"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="Slot_18"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="Slot_19"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="Slot_20"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="MainInventory"]
script = ExtResource("4_inv")
slots = Array[ExtResource("5_slot")]([SubResource("Slot_1"), SubResource("Slot_2"), SubResource("Slot_3"), SubResource("Slot_4"), SubResource("Slot_5"), SubResource("Slot_6"), SubResource("Slot_7"), SubResource("Slot_8"), SubResource("Slot_9"), SubResource("Slot_10"), SubResource("Slot_11"), SubResource("Slot_12"), SubResource("Slot_13"), SubResource("Slot_14"), SubResource("Slot_15"), SubResource("Slot_16"), SubResource("Slot_17"), SubResource("Slot_18"), SubResource("Slot_19"), SubResource("Slot_20")])

[sub_resource type="Resource" id="HotbarSlot_1"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="HotbarSlot_2"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="HotbarSlot_3"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="HotbarSlot_4"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="HotbarSlot_5"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="HotbarSlot_6"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="HotbarInventory"]
script = ExtResource("4_inv")
slots = Array[ExtResource("5_slot")]([SubResource("HotbarSlot_1"), SubResource("HotbarSlot_2"), SubResource("HotbarSlot_3"), SubResource("HotbarSlot_4"), SubResource("HotbarSlot_5"), SubResource("HotbarSlot_6")])
size = 6

[sub_resource type="BoxMesh" id="BoxMesh_floor"]
size = Vector3(30, 0.5, 30)

[sub_resource type="StandardMaterial3D" id="FloorMaterial"]
albedo_color = Color(0.35, 0.35, 0.35, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_floor"]
size = Vector3(30, 0.5, 30)

[sub_resource type="BoxMesh" id="BoxMesh_crate"]

[sub_resource type="StandardMaterial3D" id="CrateMaterial"]
albedo_color = Color(0.6, 0.4, 0.2, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_crate"]

[sub_resource type="BoxMesh" id="BoxMesh_platform"]
size = Vector3(4, 0.3, 4)

[sub_resource type="StandardMaterial3D" id="PlatformMaterial"]
albedo_color = Color(0.3, 0.5, 0.3, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_platform"]
size = Vector3(4, 0.3, 4)

[sub_resource type="BoxMesh" id="BoxMesh_wall"]
size = Vector3(8, 3, 0.5)

[sub_resource type="StandardMaterial3D" id="WallMaterial"]
albedo_color = Color(0.5, 0.4, 0.35, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_wall"]
size = Vector3(8, 3, 0.5)

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
background_color = Color(0.4, 0.55, 0.7, 1)
ambient_light_source = 2
ambient_light_color = Color(0.6, 0.6, 0.6, 1)

[node name="DualPerspectiveTestScene" type="Node3D"]

[node name="Player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)
script = ExtResource("1_player")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_player")

[node name="CharacterMesh" parent="Player" instance=ExtResource("20_character")]

[node name="FPSPitchPivot" type="Node3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="FPSCamera" type="Camera3D" parent="Player/FPSPitchPivot"]

[node name="CameraTarget" type="Node3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="DualPerspectiveController3D" type="Node" parent="Player" node_paths=PackedStringArray("fps_look_controller", "fps_pitch_pivot", "fps_camera", "orbit_camera_controller", "third_person_camera", "character_mesh", "body", "input_router", "motor", "state_machine")]
script = ExtResource("6_controller")
fps_look_controller = NodePath("../PlayerLookController3D")
fps_pitch_pivot = NodePath("../FPSPitchPivot")
fps_camera = NodePath("../FPSPitchPivot/FPSCamera")
orbit_camera_controller = NodePath("../OrbitCameraController3D")
third_person_camera = NodePath("../OrbitCameraController3D/ThirdPersonCamera")
character_mesh = NodePath("../CharacterMesh")
body = NodePath("..")
input_router = NodePath("../PlayerInputRouter3D")
motor = NodePath("../PlayerMotor3D")
state_machine = NodePath("../PlayerStateMachine")

[node name="PlayerInputRouter3D" type="Node" parent="Player"]
script = ExtResource("7_input")

[node name="PlayerMotor3D" type="Node" parent="Player" node_paths=PackedStringArray("body", "input_router")]
script = ExtResource("8_motor")
body = NodePath("..")
input_router = NodePath("../PlayerInputRouter3D")

[node name="PlayerLookController3D" type="Node" parent="Player" node_paths=PackedStringArray("yaw_node", "pitch_node", "input_router")]
script = ExtResource("9_fps_look")
yaw_node = NodePath("..")
pitch_node = NodePath("../FPSPitchPivot")
input_router = NodePath("../PlayerInputRouter3D")

[node name="OrbitCameraController3D" type="Node" parent="Player" node_paths=PackedStringArray("target", "camera", "input_router")]
script = ExtResource("10_orbit")
target = NodePath("../CameraTarget")
camera = NodePath("ThirdPersonCamera")
input_router = NodePath("../PlayerInputRouter3D")

[node name="ThirdPersonCamera" type="Camera3D" parent="Player/OrbitCameraController3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 5)

[node name="PlayerStateMachine" type="Node" parent="Player" node_paths=PackedStringArray("initial_state", "controller")]
script = ExtResource("11_state_machine")
initial_state = NodePath("grounded")
controller = NodePath("../DualPerspectiveController3D")

[node name="grounded" type="Node" parent="Player/PlayerStateMachine"]
script = ExtResource("12_grounded")

[node name="airborne" type="Node" parent="Player/PlayerStateMachine"]
script = ExtResource("13_airborne")

[node name="ui" type="Node" parent="Player/PlayerStateMachine"]
script = ExtResource("14_ui_state")

[node name="AnimationController" type="Node" parent="Player" node_paths=PackedStringArray("state_machine", "animation_tree")]
script = ExtResource("21_anim_ctrl")
state_machine = NodePath("../PlayerStateMachine")
animation_tree = NodePath("../CharacterMesh/AnimationTree")

[node name="InventoryComponent" type="Node" parent="Player"]
script = ExtResource("2_inv_comp")
main_inventory = SubResource("MainInventory")
hotbar_inventory = SubResource("HotbarInventory")

[node name="EquipmentComponent" type="Node" parent="Player"]
script = ExtResource("3_equip_comp")
equipment_slots = {
"Chest": null,
"Feet": null,
"Hands": null,
"Head": null,
"Legs": null,
"MainHand": null,
"Neck": null,
"OffHand": null,
"Ring1": null,
"Ring2": null,
"Shoulders": null,
"Waist": null
}
defined_slots = Array[String](["Head", "Neck", "Shoulders", "Chest", "Hands", "MainHand", "Waist", "Legs", "OffHand", "Ring1", "Feet", "Ring2"])

[node name="InventoryInteractionHandler" type="Node" parent="Player"]
script = ExtResource("19_handler")

[node name="CanvasLayer" type="CanvasLayer" parent="Player"]

[node name="InventoryUI" parent="Player/CanvasLayer" node_paths=PackedStringArray("tooltip_controller", "equipment_component", "inventory_component", "interaction_handler") instance=ExtResource("15_inv_ui")]
tooltip_controller = NodePath("../TooltipController")
equipment_component = NodePath("../../EquipmentComponent")
inventory_component = NodePath("../../InventoryComponent")
interaction_handler = NodePath("../../InventoryInteractionHandler")

[node name="QuickInventoryUI" parent="Player/CanvasLayer" node_paths=PackedStringArray("tooltip_controller", "inventory_component", "interaction_handler") instance=ExtResource("16_quick_inv")]
tooltip_controller = NodePath("../TooltipController")
inventory_component = NodePath("../../InventoryComponent")
interaction_handler = NodePath("../../InventoryInteractionHandler")

[node name="Instructions" type="Label" parent="Player/CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
grow_horizontal = 2
grow_vertical = 0
text = "Press I or ESC to toggle inventory
WASD to move, Space to jump, Shift to sprint"
horizontal_alignment = 1

[node name="ItemTooltipUI" parent="Player/CanvasLayer" instance=ExtResource("17_tooltip")]

[node name="TooltipController" type="Node" parent="Player/CanvasLayer" node_paths=PackedStringArray("tooltip_ui")]
script = ExtResource("18_tooltip_ctrl")
tooltip_ui = NodePath("../ItemTooltipUI")

[node name="HUD" type="Label" parent="Player/CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 10.0
offset_right = 200.0
offset_bottom = 50.0
grow_horizontal = 2
text = "Dual Perspective Player Control Test
Press V to toggle perspective | I for inventory | Shift to sprint"
horizontal_alignment = 1

[node name="PerspectiveLabel" type="Label" parent="Player/CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 10.0
offset_bottom = 30.0
grow_horizontal = 0
text = "Perspective: First Person (V to toggle)"
horizontal_alignment = 2

[node name="Environment" type="Node3D" parent="."]

[node name="Floor" type="StaticBody3D" parent="Environment"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/Floor"]
mesh = SubResource("BoxMesh_floor")
surface_material_override/0 = SubResource("FloorMaterial")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Floor"]
shape = SubResource("BoxShape3D_floor")

[node name="Crate1" type="StaticBody3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0.75, -3)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/Crate1"]
mesh = SubResource("BoxMesh_crate")
surface_material_override/0 = SubResource("CrateMaterial")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Crate1"]
shape = SubResource("BoxShape3D_crate")

[node name="Crate2" type="StaticBody3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0.75, -5)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/Crate2"]
mesh = SubResource("BoxMesh_crate")
surface_material_override/0 = SubResource("CrateMaterial")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Crate2"]
shape = SubResource("BoxShape3D_crate")

[node name="Crate3" type="StaticBody3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1.75, -5)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/Crate3"]
mesh = SubResource("BoxMesh_crate")
surface_material_override/0 = SubResource("CrateMaterial")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Crate3"]
shape = SubResource("BoxShape3D_crate")

[node name="Platform1" type="StaticBody3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 1.5, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/Platform1"]
mesh = SubResource("BoxMesh_platform")
surface_material_override/0 = SubResource("PlatformMaterial")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Platform1"]
shape = SubResource("BoxShape3D_platform")

[node name="Platform2" type="StaticBody3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 3, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/Platform2"]
mesh = SubResource("BoxMesh_platform")
surface_material_override/0 = SubResource("PlatformMaterial")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Platform2"]
shape = SubResource("BoxShape3D_platform")

[node name="Wall1" type="StaticBody3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 1.5, -8)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/Wall1"]
mesh = SubResource("BoxMesh_wall")
surface_material_override/0 = SubResource("WallMaterial")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Wall1"]
shape = SubResource("BoxShape3D_wall")

[node name="Wall2" type="StaticBody3D" parent="Environment"]
transform = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, -10, 1.5, -4)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/Wall2"]
mesh = SubResource("BoxMesh_wall")
surface_material_override/0 = SubResource("WallMaterial")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Wall2"]
shape = SubResource("BoxShape3D_wall")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(0.866025, -0.353553, 0.353553, 0, 0.707107, 0.707107, -0.5, -0.612372, 0.612372, 0, 10, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = SubResource("Environment_1")
